fix bootbox dialog overflow on long word issue, force wrap

--- a/public/css/map.css
+++ b/public/css/map.css
@@ -32,9 +32,9 @@ input[type=search] {
 }
 
 #selectFilter{
- width: 80%;
- border: 2px solid #ccc;
- font-size: 16px;
+   width: 80%;
+   border: 2px solid #ccc;
+   font-size: 16px;
 }
 
 @media screen 
@@ -90,6 +90,11 @@ and (min-device-width: 1200px){
 
 .popup-link{
     float: right;
+}
+
+.bootbox-body{
+  word-break: break-all;
+  white-space: normal;
 }
 
 .modal-content{
